<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_banner"
        android:enabled="true"
        android:icon="@drawable/baseline_smart_screen_24"
        android:title="@string/banner" />

    <item
        android:id="@+id/menu_mrec"
        android:enabled="true"
        android:icon="@drawable/baseline_crop_square_24"
        android:title="@string/mrec" />

    <item
        android:id="@+id/menu_interstitial"
        android:enabled="true"
        android:icon="@drawable/baseline_smartphone_24"
        android:title="@string/interstitial" />

    <item
        android:id="@+id/menu_rewarded"
        android:enabled="true"
        android:icon="@drawable/baseline_diamond_24"
        android:title="@string/rewarded" />

    <item
        android:id="@+id/menu_more"
        android:enabled="true"
        android:icon="@drawable/baseline_more_horiz_24"
        android:title="@string/more" />

</menu>
